test: #18574: fix threading workaround (#18885) (#18901)
Signed-off-by: Artur Kugal <artur.kugal@swirldslabs.com>
Signed-off-by: Ivan Malygin <ivan@swirldslabs.com>
Co-authored-by: Artur Kugal <artur.kugal.career@gmail.com>